--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "3cameras",
+  "name": "store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "bootstrap": "^4.3.1",
+    "react": "^16.6.3",
+    "react-async-script-loader": "^0.3.0",
+    "react-dom": "^16.6.3",
+    "react-paypal-express-checkout": "^1.0.5",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -16,16 +21,13 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "dotenv": "^6.2.0"
   }
 }
